# project-infrastructure

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  pre-commit-config.yaml  pyproject.toml  run-pre-commit.sh
custom-pip-package/: LICENSE  README.md  setup.py
custom-pip-package/PROJECT_NAME_utilpack/gcp_toolkit/: bigquery_controller.py  bigquery_jobs.py  bigquery_operations.py  cloud_firestore_controller.py  cloud_tasks_controller.py  monitoring_controller.py  pub_sub_controller.py  secret_controller.py
custom-pip-package/PROJECT_NAME_utilpack/quickops_toolkit/: logger.py
custom-pip-package/PROJECT_NAME_utilpack/toolkit/: generic_dependencies.py  generic_funtions.py
custom-pip-package/datadice_utilpack/gcp_toolkit/: bigquery_controller.py  bigquery_jobs.py  bigquery_operations.py  cloud_firestore_controller.py  cloud_firestore_controller.py.bak  cloud_sql_controller.py  cloud_sql_controller.py.bak  cloud_tasks_controller.py  monitoring_controller.py  pubsub_controller.py  secret_controller.py
custom-pip-package/datadice_utilpack/quickops_toolkit/: __init__.py  adapted_requests.py  custom_error.py  git_controller.py  logger.py
infrastructure-artifacts/airbyte-haproxy-vm-docker/: README.md  run.sh  setup.sh  shut-down.sh
infrastructure-artifacts/airbyte-haproxy-vm-docker/airbyte/: .env  (+2 more)
infrastructure-artifacts/airflow-haproxy-vm-docker/: Dockerfile  READEME.md  README.md  run.sh  setup.sh  shut-down.sh
terraform-project-init/: README.md  apply_terraform.sh  destroy_terraform.sh  main.tf  providers.tf  variables.tf
(+20 files in other folders)
