[tool.poetry]
name="datadice"
version = "0.1.0"
packages = [
    { include = "custom-pip-package"},
]
description = ""
authors = ["dataice", "it@datadice.io"]
readme = "README.md"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.3.3"
darglint = "^1.8.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
bandit = "^1.7.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
